# email-mcp-server-databricks

./: .gitignore  DEPLOYMENT.md  MIGRATION.md  Makefile  QUICKSTART.md  README.md  app.yaml  databricks.yml  main.py  pyproject.toml  test_email.py
src/email_server/: __init__.py  app.py  main.py  server.py
src/email_server/static/: index.html
